cabal-version: 3.0
name: hays
version: 0.1.0.0

synopsis:
    A library for building modern back-end applications. It offers three main abstractions: (1) An HTTP server framework, (2) A Task execution library, and (3) A Logger library.

homepage: https://github.com/realfolk/haskell-hays
license: LGPL-3.0-only
license-file: LICENSE

author: Dhruv Dang
maintainer: dhruv@realfolk.com

category: Web

build-type: Simple

library
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: lib

    exposed-modules: 
        HAYS.Server
        HAYS.Server.Request
        HAYS.Server.Response
        HAYS.Server.Response.CachingStrategy
        HAYS.Server.Router
        HAYS.Task
        HAYS.Task.Forever
        HAYS.Task.Once
        HAYS.Task.Types
        HAYS.Logger

    other-modules:
        HAYS.Server.Internal.HTTP

    build-depends:   
        base ^>=4.16.4.0,
        aeson,
        blaze-builder,
        bytestring,
        pouch,
        http-types,
        mtl,
        text,
        wai,
        warp,
        warp-tls

test-suite hays-test
    ghc-options: -Wall -threaded -rtsopts

    type: exitcode-stdio-1.0

    default-language: GHC2021
    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        Test.HAYS.LoggerSpec
        Test.HAYS.Task.ForeverSpec
        Test.HAYS.Task.OnceSpec
        Test.HAYS.TaskSpec

    build-depends:
        base ^>=4.16.4.0,
        hays,
        hspec,
        mtl,
        pouch,
        text
